fix overflow issue

--- a/src/app/team/team.component.css
+++ b/src/app/team/team.component.css
@@ -18,3 +18,7 @@ h4 {
 .btn-color {
     color: #000;
 }
+.team-container {
+    overflow: scroll;
+    height: 100%;
+}
